# zara

./: .env.example  AGENTS.md  LICENSE  README.md  pyproject.toml
src/zara/: cli.py  client.py  config.py  notify.py  scanner.py
